jobmatch/src/main/resources/static/styles/main.css
*{
    box-sizing: border-box;
}
html, body {
    height: 100%;
    margin: 0;
    padding: 0;
    font-family: 'Open Sans', sans-serif;
}

#wrapper {
    height: 100%;
}

header{
    text-align:left;
    background:#F2F2F2;
    color:#999999;
    height:50px;
    padding:10px;
    width:100%;
    position:absolute;
    z-index:-1;
}

h1{
    font-family:'Montserrat',sans-serif;
    font-weight:400;
    margin:5px;
    font-size:20px;
}

h3{
    font-family:'Montserrat',sans-serif;
    font-weight:200;
    margin:5px;
    font-size:20px;
}

.headline{
    padding-left:20%;
    text-align:center;
}

.logo {
    color: #FF9933 !important;
    font-weight: 700 !important;
}

#sidebar {
    padding-top: 20px;
    float: left;
    width: 20%;
    height: 100%;
    background: #5E5E5E;
    color: white;
}

img.avatar {
    display: inline;
    padding: 30px 0 0 0;
}

h2 {
    margin: 5px;
    font-size: 15px;
    font-family: 'Open Sans', sans-serif;
    font-weight: 700;
    text-transform: uppercase;
}

h2.company {
    display: inline;
}

.sidebar-button {
    display: block;
    margin: 0 auto;
    border: none;
    border-radius: 5px;
    color: #FFFFFF;
    background: #FF9933;
    padding: 10px 20px 10px 20px;
    font-family: 'Montserrat', sans-serif;
    font-weight: 700;
    text-decoration: none;
    text-transform: uppercase;
}

.sidebar-button:hover {
    background: #E58A2E;
    text-decoration: none;
    cursor: pointer;
}

#sidebar-nav {
    list-style-type: none;
    margin: 0;
    padding: 0;
    width: 100%;
    font-family: 'Montserrat', sans-serif;
}

#sidebar-nav > li > a {
    display: block;
    padding: 25px 0 25px 20px;
    margin-bottom: 3px;
    color: #AEAEAE;
    background-color: #6B6B6B;
    text-decoration: none;
}

#sidebar-nav > li > a:hover {
    color: white;
}

#sidebar-nav > li > a:active {
    color: white;
}

#content{
    float:left;
    width:75%;
    margin-top: 60px;
}

/*job posting*/
#job-post{
    width:100%;
    padding-left:25%;
    padding-right:25%;
}

/*sortable list*/
ul.sortable-list{
    padding:0;
}

ul.sortable-list li{
    display:block;
    width: 150px;
    margin-bottom: 10px;
    background-color: white;
}

ul.sortable-list li:hover,
ul.sortable-list li:hover{
    cursor: move;
}

.form-field{
    margin:0 auto;
    position:relative;
    margin-bottom:20px;
}

.form-jobpost input[type="text"]{
    width:88%;
    border-radius:3px;
    padding:15px;
}

textarea{
    width:90%;
    height:100px;
    border-radius:3px;
}

.form-jobpost select{
    width:36%;
    border-radius:3px;
    padding:15px;
}

.form-jobpost label{
    padding:5px;
}

.radio-button{
    display:inline;
    padding:10px;
    border: 1px solid #E4E4E4;
}

.form-jobpost select,
.form-jobpost input[type="text"],
.form-jobpost textarea{
    background-color:white;
    border:1px solid #E4E4E4;
}

.form-jobpost select:focus,
.form-jobpost select:hover,
.form-jobpost input[type="text"]:focus,
.form-jobpost input[type="text"]:hover,
.form-jobpost textarea:focus,
.form-jobpost textarea:hover{
    background-color:white;
    border:1px solid #D7D7D7;
}

.form-jobpost input, textarea, select{
    font-family:'Open Sans',sans-serif;
}

.select-text{
    margin:1px;
}

.form-jobpost textarea{
    padding:15px 0 0 15px;
}
.form-jobpost input[type="submit"]:hover{
    background:#E58A2E;
    text-decoration:none;
    cursor:pointer;
}

p.note{
    font-style: italic;
    font-size: .8em;
    margin-top: 0;
}

/*jobs list, leaderboard*/
.jobs-list{
    width: 100%;
}

.jobs-list>ul{
    list-style-type: none;
}

.jobs-list>ul>li{
    font-family: "Montserrat", sans-serif;
    margin-bottom: 5px;
    padding: 25px;
    background-color: #FF9933;
    color:white;
    align:center;
}

.jobs-list>ul>li:hover{
    color: white;
    background-color: #6B6B6B;
    cursor: pointer;
}

ul.title-matches-list>li>div.title{
    float: left
}

ul.title-matches-list>li>div.matches{
    float: right
}

#bg a:link, #bg a:visited, #bg a:hover {
    color: white;
}

#bg a:hover {
    color: #FF9933;
}

.call-to-action,
.button{
    padding:10px 20px 10px 20px;
    text-decoration: none;
    border-radius:5px;
    text-transform:uppercase;

    font-family: 'Montserrat', sans-serif;
    font-weight: 400;
}

.call-to-action{
    color:white;
    background:#FF9933;
    border:none;
}

.call-to-action:hover{
    background:#E58A2E;
    cursor:pointer;
}


.button {
    border-radius: 5px;
    color: #FF9933;
    background: white;
    border: 1px solid rgba(255, 153, 51, .4);
}

.button:hover {
    cursor: pointer;
    border: 1px rgb(255, 153, 51) solid;
}
.button[disabled]{
    color: silver;
    border-color: silver;
    cursor: default;
}


section[data-page]:not(:first-of-type){
    display:none;
}

.view-job h2 {
    margin: 1em 0 0.5em 0;
    font-weight: normal;
    position: relative;
    font-size: 28px;
    line-height: 40px;
    background: #FF9933;
    border: 1px solid #fff;
    padding: 5px 15px;
    color: white;
    border-radius: 0 10px 0 10px;
    font-family: 'Muli', sans-serif;
}

.view-job h3 {
    margin: 1em 0 0.5em 0;
    font-weight: 600;
    font-family: 'Titillium Web', sans-serif;
    font-size: 18px;
    line-height: 30px;
    color: #FF9933;
    text-transform: uppercase;
    border-bottom: 1px solid #aaa;
}

.view-job p {
    margin: 1em 0 0.5em 0;
    font-weight: 600;
    font-family: 'Montserrat', sans-serif;
    position: relative;
    font-size: 18px;
    line-height: 20px;
    color: #999999;
}

a[data-favorite="true"]{background-color:red;}

#nobg a:link, #nobg a:visited {
    color: darkorange;
}
#nobg a:hover {
    color: lightsalmon;
}

table {
    width:50%;
    border-collapse:collapse;
    font-size: 12px;
    color: #5E5E5E;
}
th, td {
    padding: 10px;
    text-align: left;
}
table#t1 tr:nth-child(even) {
    background-color: #F2F2F2;
}
table#t1 tr:nth-child(odd) {
    background-color:#FFF;
}
table#t1 th	{
    background-color: #5E5E5E;
    color: white;
    font-size: large;
    padding: 15px;
}

